add page create Product + api controller
